# face2mqtt

./: Dockerfile  README.md  face2mqtt  face2mqtt.service  facedetector.py  ipcamera.py  main.py  pyproject.toml  visualizer.py
