[project]
name = "face2mqtt"
version = "0.1.0"
description = "Detect human face from IP camera and notify mqtt broker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.5",
]
